UI improvements - Fix alignement error for critical samples on Safari [sc-77680] - Settings: no more dividers between subsection title and subsection content - Settings: use Ratio instead of Proportion

--- a/webapps/stress-test-center-view/style.css
+++ b/webapps/stress-test-center-view/style.css
@@ -1,3 +1,8 @@
+/** GENERAL **/
+.no-wrap {
+    white-space: nowrap;
+}
+
 /** FORM **/
 
 form {
@@ -11,6 +16,10 @@ label {
 
 .label-text {
     margin-bottom: 0;
+}
+
+form input {
+    font-size: inherit;
 }
 
 form input:not([type]):focus,
@@ -273,10 +282,6 @@ transform: translate(-125%, -50%);
     padding: 16px;
 }
 
-.webapp-subsection__delimiter {
-    border-bottom: 1px solid var(--grey-lighten-6);
-}
-
 .webapp-subsection__delimiter_title {
     text-transform: uppercase;
     font-weight: 500;
@@ -371,12 +376,9 @@ transform: translate(-125%, -50%);
     margin: 0 8px;
 }
 
-.key-value-element > .icon-trash {
-    margin-left: 8px;
-}
-
 .icon-trash {
     color: var(--error-red);
+    margin-left: 8px;
 }
 
 .icon-trash:hover {
@@ -605,6 +607,11 @@ table {
 
 .table-sample-feature__name, .table-sample-feature__value {
     max-width: 50%;
+    display: inline-block;
+}
+
+.table-sample-feature__value{
+    margin-left: 4px;
 }
 
  .table-striped tbody tr:nth-of-type(2n+1) {
